HISTORY

  Version 5.0.0  2011-11-
  ------------------------------------------------------------------------------
    RC2:
    - ability to defragment NTFS attribute lists was added
    - the following translations were updated:

      Japanese, Korean, Italian, Iloko, Czech, Slovak, Portuguese (BR),
      Romanian, Filipino (Tagalog), Catalan, Spanish (ES), Hungarian,
      Farsi, Yiddish
    
    - added command script to create translation report as text/plain
      and text/wiki
    - few little bugs in volume processing routines were fixed
    - volume letter being processed was added to GUI title
    - a header was added to 'udefrag -l' command output

    RC1:
    - FILTER SYNTAX CHANGED to provide better flexibility
    - ability to defragment folder itself without defragmentation
      of its contents added to the context menu of Windows Explorer
    - GUI options forced to be not overwritten at GUI program exit
    - MFT optimization implemented
    - repeat action menu and toolbar button were added to GUI
    - --repeat command line switch was added to the console interface
      and to the boot time defragmenter
    - volume label is now displayed by the console interface for
      -l and -la switches
    - ability to defragment a few more internal NTFS files 
      ($Secure streams, $Extend folder and its subfolders) was added
    - ability to defragment reparse points was added
    - all the volume processing routines were optimized for speed
    - one bug causing incorrect time limit treatment was fixed
    - added display of the time limit at boot time
    - MFT zone draw was adjusted to be more precise and correct
    - few bugs in cluster map redraw algorithm were fixed
    - few bugs in volume processing routines were fixed
    - console interface help screen now includes examples
    - the following translations were added:

      Latin, Hebrew, Javanese, Indonesian (Bahasa Indonesia), Spanish (MEX)
