@@ -168,6 +168,7 @@ static int internal_validate_volume(char volume_letter,int skip_removable,volume
 	
 	v->letter = volume_letter;
 	v->is_removable = FALSE;
+	v->is_dirty = FALSE;
 	type = winx_get_drive_type(volume_letter);
 	if(type < 0) return (-1);
 	if(type == DRIVE_CDROM){
@@ -203,7 +204,8 @@ static int internal_validate_volume(char volume_letter,int skip_removable,volume
 	v->fsname[MAXFSNAME - 1] = 0;
 	wcsncpy(v->label,volume_info.label,MAX_PATH);
 	v->label[MAX_PATH] = 0;
-	return 0;
+	v->is_dirty = volume_info.is_dirty;
+	return v->is_dirty ? UDEFRAG_DIRTY_VOLUME : 0;
 }
 
 /** @} */
